post type별 피드 생성, user global dietary 반영.